# leaflens

./: .dockerignore  .gitignore  Dockerfile  docker-compose.monitoring.yml  main.py  mlflow.db  pyproject.toml
.github/workflows/: deploy.yml
monitoring/: prometheus.yml
notebooks/: 01_eda.ipynb
src/api/: app.py  predictor.py
src/model/: clip_model.py  evaluate.py  trainer.py
tests/: test_api.py
